[package]
name = "kvs"
version = "0.1.0"
authors = ["paulo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.33.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "*"
serde_json="1.*"
serde="*"
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
message-io = "0.14"
bincode = "1.3.3"
